# minecraft-copilot-ml

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  GENERATE_README.md  README.md  analyze_dataset.py  count_usable.py  d_6761a09f6970b0ee_data_loader_py.html  d_6761a09f6970b0ee_minecraft_pre_flattening_id_py.html  d_6761a09f6970b0ee_model_py.html  d_f96b7bf3cf3b9c6d_test_data_loader_py.html  dataset.py  diffusion.py  evaluate.py  example.py  flake.nix  flow_matching.py  generate.py  main.py  minecraft_dataset.py  minecraft_vae.py  model.py  pyproject.toml  sample.py  schematic_loader.py  scrape.py  scrape_browser.js  status.json  test_dataset.py  train.py  vae_demo.py  validate_sample_schematics.py  validate_schematics.py  viz.py
.github/workflows/: alignment.yml  build-train.yml  create_pull_request.yml  dispatcher.yml  master.yml  pull_request.yml
feat/one-cycle-lr/: d_6761a09f6970b0ee___init___py.html  d_6761a09f6970b0ee___main___py.html  d_6761a09f6970b0ee_data_loader_py.html  d_6761a09f6970b0ee_minecraft_pre_flattening_id_py.html  d_6761a09f6970b0ee_model_py.html  d_f96b7bf3cf3b9c6d___init___py.html  index.html  status.json  (+3 more)
improved_diffusion/: unet.py
master/: d_6761a09f6970b0ee___init___py.html  d_6761a09f6970b0ee___main___py.html  d_f96b7bf3cf3b9c6d___init___py.html  d_f96b7bf3cf3b9c6d_test_minecraft_pre_flattening_id_py.html  d_f96b7bf3cf3b9c6d_test_model_py.html  index.html
minecraft_copilot_ml/: __main__.py  data_loader.py  destroy_16.py  environment.py  generate_block_maps.py  main.py  metrics_graph.ipynb  minecraft_pre_flattening_id.py  model.py  notebook.ipynb  otcfm_visualizer.ipynb  preprocessing_pipeline.py  processing_16.py  schematics_download_notebook.ipynb  train.py  vae.py
(+18 files in other folders)
