[project]
name = "minecraft-copilot-ml"
version = "0.1.0"
description = "Minecraft structure completion via absorbing-state discrete diffusion"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.9.0",
    "nbtlib>=2.0.4",
    "plotly>=5.0.0",
    "torch>=2.7.0",
    "tqdm>=4.66.0",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu128"
name = "pytorch-cu128"
explicit = true

[[tool.uv.index]]
url = "https://pypi.org/simple"
